Corrected Css spacing

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -37,7 +37,7 @@
     #header{
         display: block;
         margin-left: 10%;
-        margin-top: 5%;
+        margin-top: 2%;
         margin-right: 10%;
         font-size: 25px;
         margin-bottom: 20px;
@@ -62,10 +62,11 @@
         /* display: flex allows centering of di_landing_page_text box*/
         display: flex;
         overflow: hidden;
-        padding-left:13%;
-        padding-right: 13%;
-        padding-top: 15%;
-        padding-bottom: 15%;
+        padding-left:7%;
+        padding-right: 7%;
+        padding-top: 10%;
+        padding-bottom: 10%;
+        height: 40%;
 
     }
 
